Create markup of Header section

--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
   </head>
   <body>
     <!-- Header -->
-    <header></header>
+    <header>
+      <nav>
+        <div class="logo">
+          <img src="./assets/logo.png" alt="" />
+        </div>
+        <ul>
+          <li><a href="#features">Features</a></li>
+          <li><a href="#how-it-works">How It Works</a></li>
+          <li><a href="#why-its-different">Why It's Different</a></li>
+        </ul>
+        <a href="#" class="btn btn-primary">Get Early Access</a>
+      </nav>
+    </header>
     <!-- Main Content -->
-    <main>
-        
-    </main>
+    <main></main>
     <!-- Footer -->
     <footer></footer>
   </body>
