--- a/index.html
+++ b/index.html
@@ -36,7 +36,25 @@
       </nav>
     </header>
     <!-- Main Content -->
-    <main></main>
+    <main>
+      <!-- Hero Section -->
+      <section id="hero">
+        <div class="hero-content">
+          <h1>
+            Structured Thinking, <br />
+            <span>Not Just Note-Taking</span>
+          </h1>
+          <p>
+            A private system to store notes, read books, and learn by building
+            long-term knowledge.
+          </p>
+          <div class="hero-action-area">
+            <a href="#" class="btn btn-primary">Start Building Your Vault</a>
+            <a href="#how-it-works" class="btn btn-primary">See How It Works</a>
+          </div>
+        </div>
+      </section>
+    </main>
     <!-- Footer -->
     <footer></footer>
   </body>
