Create markup of Features section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
           </div>
         </div>
       </section>
+
+      <!-- Features Section -->
+      <section id="features">
+        <header class="section-header">
+          <h2>Notes Don’t Fail, Structure Does.</h2>
+          <p>
+            You’re not bad at learning — your tools just weren’t built for how
+            knowledge actually works.
+          </p>
+        </header>
+        <div class="features-list">
+          <article>
+            <h3>Scattered Notes</h3>
+            <p>Your ideas live in different apps, folders, and formats.</p>
+          </article>
+          <article>
+            <h3>Bookmark Overload</h3>
+            <p>Hundreds of saved links you’ll never revisit.</p>
+          </article>
+          <article>
+            <h3>No Idea Connections</h3>
+            <p>Notes exist in isolation instead of forming insight.</p>
+          </article>
+        </div>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
