--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
           </article>
         </div>
       </section>
+      <!-- Solution Section -->
+       <section class="solution">
+        <div class="solution-content">
+            <h2>Your Second Brain, <br>Structured By Design.</h2>
+            <ul class="solution-list">
+                <li>Capture ideas with structure built-in</li>
+                <li>Connect related concepts automatically</li>
+                <li>Build lasting knowledge through reflection</li>
+                <li>Find insights instantly with semantic search</li>
+            </ul>
+        </div>
+       </section>
     </main>
     <!-- Footer -->
     <footer></footer>
