Create markup Get Action section

--- a/index.html
+++ b/index.html
@@ -77,20 +77,37 @@
             <h3>No Idea Connections</h3>
             <p>Notes exist in isolation instead of forming insight.</p>
           </article>
+          <article>
+            <h3>Forgetting what you learned</h3>
+            <p>Knowledge fades because there's no system to retain it.</p>
+          </article>
         </div>
       </section>
       <!-- Solution Section -->
-       <section class="solution">
-        <div class="solution-content">
-            <h2>Your Second Brain, <br>Structured By Design.</h2>
-            <ul class="solution-list">
-                <li>Capture ideas with structure built-in</li>
-                <li>Connect related concepts automatically</li>
-                <li>Build lasting knowledge through reflection</li>
-                <li>Find insights instantly with semantic search</li>
-            </ul>
+      <section class="solution">
+        <div>
+          <img src="./assets/image7.png" alt="" />
         </div>
-       </section>
+        <div class="solution-content">
+          <h2>Your Second Brain, <br />Structured By Design.</h2>
+          <ul class="solution-list">
+            <li>Capture ideas with structure built-in</li>
+            <li>Connect related concepts automatically</li>
+            <li>Build lasting knowledge through reflection</li>
+            <li>Find insights instantly with semantic search</li>
+          </ul>
+        </div>
+      </section>
+      <!-- Get Action Section -->
+      <section class="get-action">
+        <h2>Ready To Think More Clearly?</h2>
+        <p>
+          Join thousands of learners who are building their personal knowledge
+          vaults. Start free, no credit card required.
+        </p>
+        <a href="#" class="btn btn-primary">Get Early Access</a>
+        <p>Free during early access • No credit card needed</p>
+      </section>
     </main>
     <!-- Footer -->
     <footer></footer>
