Markup Footer section

--- a/index.html
+++ b/index.html
@@ -110,6 +110,18 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-content">
+        <div class="social-links">
+          <img src="./assets/logo.png" alt="Knowledge Vault" />
+          <nav class="footer-nav">
+            <a href="#">Twitter</a>
+            <a href="#">Linkedin</a>
+            <a href="#">Facebook</a>
+          </nav>
+        </div>
+        <p>@ 2025 Knowledge Vault. All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
