Desing Header section

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <nav>
+    <header class="top-header">
+      <nav class="navbar">
         <div class="logo">
           <img src="./assets/logo.png" alt="" />
         </div>
@@ -120,6 +120,7 @@
             <a href="#">Facebook</a>
           </nav>
         </div>
+        <hr>
         <p>@ 2025 Knowledge Vault. All rights reserved.</p>
       </div>
     </footer>
