Design Features section

--- a/index.html
+++ b/index.html
@@ -42,15 +42,14 @@
         <div class="hero-content">
           <h1>
             Structured Thinking, <br />
-            <span>Not Just Note-Taking</span>
+            <span>Not Just Note-Taking.</span>
           </h1>
           <p>
-            A private system to store notes, read books, and learn by building
-            long-term knowledge.
+            A private space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and turn learning into long-term knowledge.
           </p>
           <div class="hero-action-area">
             <a href="#" class="btn btn-primary">Start Building Your Vault</a>
-            <a href="#how-it-works" class="btn btn-primary">See How It Works</a>
+            <a href="#how-it-works" class="btn btn-primary see-how-works">See How It Works</a>
           </div>
         </div>
       </section>
@@ -66,18 +65,22 @@
         </header>
         <div class="features-list">
           <article>
+            <img src="./assets/group1.png" alt="">
             <h3>Scattered Notes</h3>
             <p>Your ideas live in different apps, folders, and formats.</p>
           </article>
           <article>
+            <img src="./assets/group2.png" alt="">
             <h3>Bookmark Overload</h3>
             <p>Hundreds of saved links you’ll never revisit.</p>
           </article>
           <article>
+            <img src="./assets/group3.png" alt="">
             <h3>No Idea Connections</h3>
             <p>Notes exist in isolation instead of forming insight.</p>
           </article>
           <article>
+            <img src="./assets/group4.png" alt="">
             <h3>Forgetting what you learned</h3>
             <p>Knowledge fades because there's no system to retain it.</p>
           </article>
