--- a/index.html
+++ b/index.html
@@ -93,11 +93,14 @@
         </div>
         <div class="solution-content">
           <h2>Your Second Brain, <br />Structured By Design.</h2>
+          <p>
+            Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.
+          </p>
           <ul class="solution-list">
-            <li>Capture ideas with structure built-in</li>
-            <li>Connect related concepts automatically</li>
-            <li>Build lasting knowledge through reflection</li>
-            <li>Find insights instantly with semantic search</li>
+            <li><i class="fa-solid fa-check"></i>Capture ideas with structure built-in</li>
+            <li><i class="fa-solid fa-check"></i>Connect related concepts automatically</li>
+            <li><i class="fa-solid fa-check"></i>Build lasting knowledge through reflection</li>
+            <li><i class="fa-solid fa-check"></i>Find insights instantly with semantic search</li>
           </ul>
         </div>
       </section>
