--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             A private space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and turn learning into long-term knowledge.
           </p>
           <div class="hero-action-area">
-            <a href="#" class="btn btn-primary">Start Building Your Vault</a>
-            <a href="#how-it-works" class="btn btn-primary see-how-works">See How It Works</a>
+            <a href="#" class="btn btn-primary">Start Building Your Vault<i class="fa-solid fa-right-long"></i></a>
+            <a href="#how-it-works" class="btn btn-primary see-how-works"><i class="fa-solid fa-play"></i>See How It Works</a>
           </div>
         </div>
       </section>
@@ -111,8 +111,8 @@
           Join thousands of learners who are building their personal knowledge
           vaults. Start free, no credit card required.
         </p>
-        <a href="#" class="btn btn-primary">Get Early Access</a>
-        <p>Free during early access • No credit card needed</p>
+        <a href="#" class="btn btn-primary">Get Early Access<i class="fa-solid fa-right-long"></i></a>
+        <p class="early-bottom-content">Free during early access • No credit card needed</p>
       </section>
     </main>
     <!-- Footer -->
