--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- Header -->
-    <header class="top-header">
+    <header id="top-header">
       <nav class="navbar">
         <div class="logo">
           <img src="./assets/logo.png" alt="" />
@@ -32,7 +32,7 @@
           <li><a href="#how-it-works">How It Works</a></li>
           <li><a href="#why-its-different">Why It's Different</a></li>
         </ul>
-        <a href="#" class="btn btn-primary">Get Early Access</a>
+        <a id="header-btn" href="#" class="btn btn-primary">Get Early Access</a>
       </nav>
     </header>
     <!-- Main Content -->
@@ -40,16 +40,25 @@
       <!-- Hero Section -->
       <section id="hero">
         <div class="hero-content">
+          <button>
+            <img src="./assets/circle.png" alt="" />Early Access Now Open
+          </button>
           <h1>
             Structured Thinking, <br />
             <span>Not Just Note-Taking.</span>
           </h1>
           <p>
-            A private space to store notes, links, and learning summaries — designed to help you think clearly, connect ideas, and turn learning into long-term knowledge.
+            A private space to store notes, links, and learning summaries —
+            designed to help you think clearly, connect ideas, and turn learning
+            into long-term knowledge.
           </p>
           <div class="hero-action-area">
-            <a href="#" class="btn btn-primary">Start Building Your Vault<i class="fa-solid fa-right-long"></i></a>
-            <a href="#how-it-works" class="btn btn-primary see-how-works"><i class="fa-solid fa-play"></i>See How It Works</a>
+            <a href="#" class="btn btn-primary"
+              >Start Building Your Vault<i class="fa-solid fa-right-long"></i
+            ></a>
+            <a href="#how-it-works" class="btn btn-primary see-how-works"
+              ><i class="fa-solid fa-play"></i>See How It Works</a
+            >
           </div>
         </div>
       </section>
@@ -65,22 +74,22 @@
         </header>
         <div class="features-list">
           <article>
-            <img src="./assets/group1.png" alt="">
+            <img src="./assets/group1.png" alt="" />
             <h3>Scattered Notes</h3>
             <p>Your ideas live in different apps, folders, and formats.</p>
           </article>
           <article>
-            <img src="./assets/group2.png" alt="">
+            <img src="./assets/group2.png" alt="" />
             <h3>Bookmark Overload</h3>
             <p>Hundreds of saved links you’ll never revisit.</p>
           </article>
           <article>
-            <img src="./assets/group3.png" alt="">
+            <img src="./assets/group3.png" alt="" />
             <h3>No Idea Connections</h3>
             <p>Notes exist in isolation instead of forming insight.</p>
           </article>
           <article>
-            <img src="./assets/group4.png" alt="">
+            <img src="./assets/group4.png" alt="" />
             <h3>Forgetting what you learned</h3>
             <p>Knowledge fades because there's no system to retain it.</p>
           </article>
@@ -94,13 +103,27 @@
         <div class="solution-content">
           <h2>Your Second Brain, <br />Structured By Design.</h2>
           <p>
-            Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.
+            Personal Knowledge Vault isn't another note-taking app. z It's a
+            thinking environment where every note, link, and summary becomes
+            part of an interconnected web of understanding.
           </p>
           <ul class="solution-list">
-            <li><i class="fa-solid fa-check"></i>Capture ideas with structure built-in</li>
-            <li><i class="fa-solid fa-check"></i>Connect related concepts automatically</li>
-            <li><i class="fa-solid fa-check"></i>Build lasting knowledge through reflection</li>
-            <li><i class="fa-solid fa-check"></i>Find insights instantly with semantic search</li>
+            <li>
+              <i class="fa-solid fa-check"></i>Capture ideas with structure
+              built-in
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>Connect related concepts
+              automatically
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>Build lasting knowledge through
+              reflection
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>Find insights instantly with
+              semantic search
+            </li>
           </ul>
         </div>
       </section>
@@ -111,8 +134,12 @@
           Join thousands of learners who are building their personal knowledge
           vaults. Start free, no credit card required.
         </p>
-        <a href="#" class="btn btn-primary">Get Early Access<i class="fa-solid fa-right-long"></i></a>
-        <p class="early-bottom-content">Free during early access • No credit card needed</p>
+        <a href="#" class="btn btn-primary"
+          >Get Early Access<i class="fa-solid fa-right-long"></i
+        ></a>
+        <p class="early-bottom-content">
+          Free during early access • No credit card needed
+        </p>
       </section>
     </main>
     <!-- Footer -->
@@ -120,13 +147,16 @@
       <div class="footer-content">
         <div class="social-links">
           <img src="./assets/logo.png" alt="Knowledge Vault" />
-          <nav class="footer-nav">
-            <a href="#">Twitter</a>
-            <a href="#">Linkedin</a>
-            <a href="#">Facebook</a>
-          </nav>
+          <div class="social-link-list">
+            <h4>Social Links</h4>
+            <nav class="footer-nav">
+              <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+              <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+              <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            </nav>
+          </div>
         </div>
-        <hr>
+        <hr />
         <p>@ 2025 Knowledge Vault. All rights reserved.</p>
       </div>
     </footer>
